refactor: 자동차 모음의 자료형을 불변으로 변경